--- a/css/core.css
+++ b/css/core.css
@@ -767,9 +767,6 @@ footer p{
 	line-height: 1.5em;
 	text-align: center;
 }
-footer a{
-  line-height: 1.5em;
-}
 .dark{
   background: #212247;
   padding: 20px 0;
@@ -798,17 +795,20 @@ footer a{
   transform: translateX(-50%);
   top: 0;
 }
-.dark a:hover{
+.dark ul > li > a:hover{
   text-decoration: underline !important;
 }
-.dark a{
-  display: block;
+.dark ul > li > a{
   color: #aaa;
+  line-height: 1.7em;
+}
+.dark ul > li{
+  display: block;
   position: relative;
   z-index: 99;
 }
-.col-md-3.text-center{
-  padding-top: 2em;
+.dark .col-md-2{
+  padding-top: 2.4em;
 }
 .spec{
   border-radius: 50%;
@@ -995,6 +995,9 @@ input[id^="foto"]{
 .page-forum .hero{
   margin-bottom: 0;
 }
+.page-forum p{
+  color: #777;
+}
 .page-forum i.icon{
   background: transparent;
   font-size: 12em;
@@ -1002,17 +1005,103 @@ input[id^="foto"]{
   margin-left: .5em;
 }
 .page-forum .info{
-  float: left;
-  display: block;
+  height: 80px;
+  width: 80px;
+  font-size: 10px;
+  border-radius: 50%;
+  color: white;
   background: rgb(212, 244, 188);
-  width: 48%;
-  text-align: center;
-  box-sizing: border-box;
-  margin-right: 2%;
-  padding: .4em 0;
-  line-height: 2em;
-  border-radius: .2em;
+  display: table;
+  float: left;
+  margin-right: 1.3em;
   opacity: .8;
+}
+.page-forum .centering{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 2.3em;
+}
+.page-forum .info span{
+  background: rgb(89, 157, 20);
+  box-shadow: inset 0 0 2px rgba(0,0,0,.2);
+}
+.page-forum .info p{
+  color: #af7710;
+}
+.asking{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  -webkit-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+}
+.asking:target{
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+}
+.asking > .container{
+  position:absolute;
+  top: 45%;
+  left: 50%;
+  padding: 15em;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+.asking .row{
+  background: white;
+  box-sizing: .5em 0 3px rgba(0, 0, 0, 0.3);
+  padding: 2em;
+  position: relative;
+  border-radius: .6em;
+  -webkit-transform: translateY(-200%);
+  -ms-transform: translateY(-200%);
+  transform: translateY(-200%);
+  -webkit-transition: .3s .5s;
+  -o-transition: .3s .5s;
+  transition: .3s .5s;
+}
+.asking:target .row{
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+}
+.asking .form-control{
+  height: 4em;
+}
+.asking textarea.form-control{
+  height: 12em;
+}
+.asking #close{
+  display: block;
+  font-family: arial;
+  width: 2em;
+  height: 2em;
+  font-weight: bolder;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 2em;
+  font-size: 15px;
+  background: #eee;
+  color: #333;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+}
+.asking input{
+  background: white;
 }
 .page-forum ul li{
   margin-top: 1em;
@@ -1039,28 +1128,29 @@ input[id^="foto"]{
 .page-forum .panel-body{
   padding: 0 .5em;
 }
-.page-forum .info span{
-  background: rgb(89, 157, 20);
-  box-shadow: inset 0 0 2px rgba(0,0,0,.2);
-}
-.page-forum .info p{
-  color: #af7710;
-}
 .page-sub-forum .img-wrapper{
   height: 6em;
-  width: 100%;
+  width: 6em;
+  display: inline-block;
   border-radius: 50%;
   overflow: hidden;
-  display: table-cell;
-  vertical-align: middle;
-
   border: .2em solid #eee;
+}
+.page-sub-forum img.profilphoto{
+  min-height: 100%;
+  min-width:100%;
+}
+.page-sub-forum p{
+  font-size: 1em;
 }
 .page-sub-forum .ts,
 .page-sub-forum .buble{
   background-color: #ddd;
   border-radius: .5em;
   padding: .8em 1em;
+}
+.page-sub-forum .akun{
+  font-size: 1.2em;
 }
 .page-sub-forum .buble{
   margin-left: 1em;
@@ -1074,6 +1164,16 @@ input[id^="foto"]{
   border-right-color:#ddd;
   left: -1em;
   top: 1.2em;
+}
+.page-sub-forum p.answer,
+.page-sub-forum h4.judul{
+  font-size: 1.5em;
+  margin-bottom: .1em;
+}
+.page-sub-forum small.kategori{
+  display: block;
+  margin-bottom: .7em;
+  margin-top: .2em;
 }
 
 /*produk*/
