landing, index msh berantakan

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,8 +13,8 @@
   .offer button{
     float: right;
   }
-  #input{
-    width: 600px;
+  #input input[type="text"]{
+    width: 500px;
   }
 }
 @media screen and (max-width:992px){
